# goodreads-scraper

./: .coverage  .coveragerc  .gitignore  How-To-Use-Goodreads-Scraper.ipynb  README.md  TODO.md  books_id_extract.py  changes.md  config.ini  config.py  environment.yml  get_book_ids.py  get_books.py  get_ids.py  get_reviews.py  goodreads_classics_sample.txt  main.py  most_popular_classics.txt  pyproject.toml  requirements.txt  test_scripts.sh
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
cli/: get_web_driver.py  main_get_books.py  main_get_reviews.py
common/data_access/: get_book.py
data_files/: goodreads_classics.txt  test_book_ids.txt
example/data/: goodreads_classics.txt  goodreads_classics_most_popular.txt  goodreads_classics_sample.txt
example/shell/: test_script.sh
get_book_ids/network/: network.py
get_book_ids/parse/: parser.py
get_book_ids/query/: query_model_builder.py
get_book_ids/reader/: reader.py
get_book_ids/result/: result_match_handler.py  result_model_builder.py  result_parser.py
get_books/: get_book_controller.py  get_book_service.py  get_books.py
get_ids/: .coveragerc
get_ids/config/: config.py
get_ids/errors/: errors.py
get_ids/models/: result_model.py
get_ids/parse/: parser.py
get_ids/query/: query_model_builder.py
get_ids/reader/: reader.py
get_ids/result/: result_match_handler.py  result_model_builder.py  result_parser.py
get_ids/writer/: writer.py
get_reviews_working/: database_operations.py  get_reviews.py
notebooks/: How-To-Use-Goodreads-Scraper.ipynb
src/author/: author_config.py  test.txt  (+5 more)
(+124 files in other folders)
